--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <div class="main-inner-about">
                 <div class="about-right-content texto-justificado" data-aos="zoom-out-left" data-aos-delay="100">
                     <h2>QUEM É</h2>
-                    <<h1>DRA. ROSSANA&nbsp;CABRERA</h1>
+                    <h1>DRA. ROSSANA&nbsp;CABRERA</h1>
                     <p>Sou cirurgiã-dentista, me formei em 1992. A odontologia é uma área maravilhosa, onde temos oportunidade de trazer saúde e beleza para cada um, oferecendo qualidade de vida e saúde. Entre minhas paixões, está a universidade e, assim que me formei, além de atuar na clínica, também iniciei minha carreira docente. Fiz mestrado, doutorado e pós-doutorado na UNESP, e sou professora na área de Fisiologia Humana até hoje.</p>
                     <p>Outra área que amo é a Biomedicina, uma carreira linda, repleta de diferentes oportunidades de atuação profissional. Decidi fazer Biomedicina, me tornar Biomédica, por ser uma linda e atraente carreira e, desde 2012, coordeno o curso de Biomedicina do UniSALESIANO Araçatuba.</p>
                     <p>A estética corporal e facial são áreas que exigem conhecimento, responsabilidade, muita técnica e delicadeza. Sou especialista em Harmonização Orofacial e em Biomedicina Estética, atuo na harmonização facial e corporal e amo contribuir com a saúde e bem-estar de meus e minhas queridas pacientes que, para nós aqui na clínica, são estrelas!</p>
